correccion primer metodo hashtable